04/cluster-ip.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deploy
spec:
  replicas: 3
  selector: 
    matchLabels:
      app.kubernetes.io/name: k8s-webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-webapp
    spec:
      containers:
      - name: webapp-ctr
        image: k8smaestro/web-app:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-clusterip-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: k8s-webapp
