04/ingress-web-api.yml
apiVersion: v1
kind: Service
metadata:
  name: weather-api-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: weather-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapi-deploy
spec:
  replicas: 3
  selector: 
    matchLabels:
      app.kubernetes.io/name: weather-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weather-api
    spec:
      containers:
      - name: webapp-ctr
        image: k8smaestro/web-api:1.0
        ports:
        - containerPort: 80
