04/load-balancer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-demo-deploy
spec:
  replicas: 3
  selector: 
    matchLabels:
      app.kubernetes.io/name: lb-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lb-demo
    spec:
      containers:
      - name: lb-ctr
        image: k8smaestro/host-detector:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lb-demo-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: lb-demo
